--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,6 @@
-apturl==0.5.2
-beautifulsoup4==4.4.1
-bleach==1.4.3
-blinker==1.3
-blog-project==0.1
-Brlapi==0.6.4
-chardet==2.3.0
-checkbox-support==0.22
-command-not-found==0.3
-construct==2.5.3
-cryptography==1.2.3
-defer==1.0.6
-dj-database-url==0.3.0
-dj-static==0.0.6
+dj-database-url==0.3.
 Django==1.10.1
-django-endless-pagination==2.0
-django-markdown-deux==1.0.5
-django-pagedown==0.1.1
-django-simple-captcha==0.5.2
-django-simple-math-captcha==1.0.7
-django-social-share==0.3.1
-docutils==0.12
-feedparser==5.1.3
-future==0.15.2
-guacamole==0.9.2
 gunicorn==19.6.0
-haystack==0.36
-html5lib==0.999
-httplib2==0.9.1
-idna==2.0
-Jinja2==2.8
-language-selector==0.1
-louis==2.6.4
-lxml==3.5.0
-Mako==1.0.3
-Markdown==2.6.6
-markdown2==2.3.1
-MarkupSafe==0.23
-oauthlib==1.0.3
-onboard==1.2.0
-padme==1.1.1
-pefile==2016.3.28
-pexpect==4.0.1
-Pillow==3.3.0
-plainbox==0.25
-progressbar==2.3
 psycopg2==2.6.1
-ptyprocess==0.5
-pyasn1==0.1.9
-pycups==1.9.73
-pycurl==7.43.0
-pygobject==3.20.0
-PyJWT==1.3.0
-pyparsing==2.0.3
-python-apt==1.1.0b1
-python-debian==0.1.27
-python-decouple==3.0
-python-ptrace==0.9
-python-systemd==231
-pyxdg==0.25
-reportlab==3.3.0
-requests==2.9.1
-requirements==0.1
-sessioninstaller==0.0.0
-six==1.10.0
-static3==0.7.0
-system-service==0.3
-textile==2.3.3
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
-Unipath==1.0
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-firefoxbookmarks==0.1
-unity-scope-gdrive==0.7
-unity-scope-manpages==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
-urllib3==1.13.1
-usb-creator==0.3.0
-virtualenv==15.0.3
+ookmarks==0.1
 whitenoise==3.2.2
-xdiagnose==3.8.4.1
-xkit==0.0.0
-XlsxWriter==0.7.3
